# pyo3-file-failed-to-write-whole-buf-bug-demo

./: Cargo.toml  README.md  pyproject.toml  script.py
src/: lib.rs
